<resources>
    <string name="app_name">key notes</string>
    <string name="icon">icon</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="_12_09_29924">12/09/29924</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="start_typing">Start Typing</string>
    <string name="current_date">current_date</string>
    <string name="note">Note</string>
</resources>