<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80sp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="5sp"
    android:layout_marginTop="7sp"
    app:cardCornerRadius="5sp"
    android:background="@color/black"
    android:layout_marginStart="5sp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="#F6F7C4"
        >


    <TextView
        android:id="@+id/text_id"
        android:layout_width="350sp"
        android:layout_height="35sp"
        android:text="@string/title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:padding="1sp"
        android:layout_marginStart="5sp"
        />
        <TextView
            android:id="@+id/description"
            android:layout_width="350sp"
            android:layout_height="25sp"
            android:text="@string/description"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/text_id"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="1sp"
            android:layout_marginStart="5sp"
            />



        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            tools:text="@string/_12_09_29924"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="1sp"
            android:layout_marginTop="4sp"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginStart="5sp"
            />






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>